# mastering-erpnext-dev

./: COMMON_PITFALLS.md  CONVERSION_INSTRUCTIONS.md  ERPNEXT_BOOK_STATUS.md  FILES_CREATED.md  FINAL_COMPLETION_REPORT.md  FINAL_UPDATE_SUMMARY.md  GITHUB_ABOUT_SECTION.md  GITHUB_SETUP_QUICK_REFERENCE.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  RECOMMENDATIONS_COMPLETED.md  SECURITY_GUIDE.md  VS_CODE_SETTINGS.md  social-media-posts.md
appendix-a-quick-fixes/: README.md
projects/asset_management/asset_management_app/: pyproject.toml
projects/asset_management/asset_management_app/asset_management/doctype/asset/: asset.py
projects/production_planning/production_planning_app/: hooks.py  modules.txt  pyproject.toml
projects/production_planning/production_planning_app/production_planning/doctype/production_plan/: production_plan.json  production_plan.py  test_production_plan.py
projects/production_planning/production_planning_app/production_planning/workspace/production_planning/: production_planning.json
projects/production_planning/production_planning_app/tasks/: daily.py  weekly.py
projects/vendor_portal/vendor_portal_app/: hooks.py  modules.txt  pyproject.toml
projects/vendor_portal/vendor_portal_app/tasks/: daily.py
projects/vendor_portal/vendor_portal_app/vendor_portal/api/: purchase_order.py  vendor.py
projects/vendor_portal/vendor_portal_app/vendor_portal/webhooks/: purchase_order.py
projects/vendor_portal/vendor_portal_app/vendor_portal/workspace/vendor_portal/: vendor_portal.json
(+76 files in other folders)
