[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vendor_portal_app"
version = "0.0.1"
description = "REST API-based vendor portal for external integration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Organization", email = "info@example.com" }]
requires-python = ">=3.10"
dependencies = ["frappe"]

[tool.flit.module]
name = "vendor_portal_app"
